Fix: align top row of keypad Fix: division by zero

--- a/src/components/Keypad/Keypad.css
+++ b/src/components/Keypad/Keypad.css
@@ -4,6 +4,7 @@
 }
 
 .keypad__numbers {
+  align-items: self-start;
   background: #373d45;
   display: flex;
   flex-direction: row;
